add more to instructions

--- a/instructions.html
+++ b/instructions.html
@@ -41,9 +41,30 @@
         <a href="https://cdn.svc.asmodee.net/production-rprod/storage/downloads/games/so-clover/sc-en01-rules-16197761427wP8d.pdf">Original Game</a>
         <h1>Instructions</h1>
         <h2>Word Entering Mode</h2>
-        <p>Look at the two bottom-most words, i.e. the ones by the green bracket.
-            Use the text box at the bottom of the screen to enter one word that somehow connectos them or describes them both.
-            Proper nouns are allowed. Try to stick to English (no just translating a word into another language).
+        <p>
+            Look at the two bottom-most pair of words, i.e. the two words by the green bracket.
+            Use the text box at the bottom of the screen to enter one word that somehow connects them or describes them both.
+            Proper nouns, acronyms, onomatopoeia, and compound words are allowed, as long as they're a single word.
+            Try to stick to English (no just translating a word into another language).
+            Once you've thought of a word, press "Enter" to submit it.
+        </p>
+        <p>
+            You can tap the button in the middle of the cards to rotate the cards. This will let you 
+            cycle through all four word pairs and enter four words. Once you've entered four words, a popup will let
+            you copy a link to send this arrangment to others.
+        </p>
+        <h2>Card Placing Mode</h2>
+        <p>
+            If you receive a completed link from someone, you can try to figure out how their cards were originally arranged.
+            Try to match up each word around the four edges with a pair of words on the matching edges of two cards.
+            To make things harder, an additional fifth card has been added in, and the positions and rotations of cards have been randomized.
+        </p>
+        <p>
+            You can tap the button in the middle of the cards to rotate all of the cards.
+            You can tap a specific card to rotate it individually.
+            If you have a mouse, you can drag and drop cards to swap their positions.
+            If you're using a touchscreen, you can long-press a card (it will change colors to indicate it's selected),
+            and then you can tap another card to swap their positions.
         </p>
     </body>
 </html>
