--- a/instructions.html
+++ b/instructions.html
@@ -62,9 +62,8 @@
         <p>
             You can tap the button in the middle of the cards to rotate all of the cards.
             You can tap a specific card to rotate it individually.
-            If you have a mouse, you can drag and drop cards to swap their positions.
-            If you're using a touchscreen, you can long-press a card (it will change colors to indicate it's selected),
-            and then you can tap another card to swap their positions.
+            You can long-press (or double-click with a mouse) a card, which will change colors to indicate it's selected.
+            Then you can tap another card to swap their positions.
         </p>
     </body>
 </html>
