--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
                 -ms-user-select: none;      
                 user-select: none;
                 transition: transform 0.8s ease-in-out;
+                top: 0;
+                left: 0;
+            }
+
+            .card.animated {
+                transition: transform 0.8s ease-in-out, left 0.5s, top 0.5s;
             }
 
             .card .word {
@@ -143,6 +149,10 @@
 
             .card :nth-child(4) {
                 transform: rotate(270deg) translate(0px, var(--word-offset));
+            }
+
+            .play-container {
+                position: relative;
             }
 
             .card-container {
@@ -280,7 +290,7 @@
             }
         </style>
         <script>
-            const cards = [["stylist", "pyramid", "club", "loop"], ["broom", "tradition", "bronze", "saber"], ["lazy", "stocks", "crane", "district"], ["luxury", "battery", "carpet", "laugh"], ["flame", "sleeve", "architecture", "family"], ["shark", "feed", "ear", "cavern"], ["double", "silence", "air", "police"], ["closet", "rain", "asset", "race"], ["military", "dinosaur", "birthday", "press"], ["africa", "liquid", "twins", "patio"], ["mind", "moon", "hide", "casino"], ["game", "canvas", "punch", "soup"], ["dance", "prison", "matter", "crown"], ["lock", "schedule", "guitar", "thermometer"], ["distributor", "plush", "archeology", "cork"], ["canal", "wheat", "museum", "roof"], ["Asia", "glove", "shape", "ground"], ["hell", "track", "milk", "taste"], ["smoke", "needle", "knot", "butcher"], ["book", "soft", "poison", "diamond"], ["America", "wand", "pigeon", "robot"], ["button", "union", "axe", "board"], ["light", "case", "pepper", "fast"], ["hard", "kitchen", "finger", "note"], ["ball", "night", "tree", "school"], ["reptile", "major", "dead", "radar"], ["donkey", "virgin", "mug", "pork"], ["clothing", "banana", "tattoo", "doe"], ["chocolate", "office", "pair", "protect"], ["tent", "noodle", "weapon", "bakery"], ["fountain", "ice", "walk", "chick"], ["genius", "jewel", "summit", "bug"], ["log", "master", "skin", "border"], ["plank", "oasis", "cereal", "evening"], ["toy", "basket", "weak", "knight"], ["mummy", "flight", "bread", "chess"], ["forecast", "screw", "tomato", "grey"], ["foam", "handle", "talent", "vegetable"], ["major", "dead", "radar", "reptile"], ["frame", "weight", "pumpkin", "jungle"], ["marker", "technology", "edge", "beer"], ["diet", "explosion", "tap", "show"], ["deep", "region", "cemetery", "bracelet"], ["old", "tiger", "alliance", "cabin"], ["leak", "flask", "target", "marriage"], ["revenge", "watch", "motor", "heel"], ["ray", "boot", "rat", "gate"], ["detergent", "castle", "frost", "plastic"], ["foot", "winter", "high", "island"], ["cow", "circle", "sock", "door"], ["metal", "lighthouse", "emergency", "hero"], ["curtain", "charge", "Antarctica", "armor"], ["essence", "joke", "hospital", "roast"], ["building", "boxing", "first", "fever"], ["award", "fly", "calendar", "skull"], ["eye", "sea", "bouquet", "box"], ["Europe", "repair", "victory", "dragon"], ["cactus", "bulb", "cake", "princess"], ["trailer", "decor", "recipe", "blond"], ["cream", "laser", "arm", "work"], ["grain", "shed", "turtle", "statue"], ["beach", "morning", "head", "machine"], ["champion", "permanent", "cannon", "potato"], ["exit", "plant", "candle", "antiquity"], ["console", "voice", "recipient", "cell"], ["rice", "balcony", "bag", "thing"], ["short", "drink", "horse", "polar"], ["green", "pie", "cage", "bump"], ["theater", "smell", "oar", "thief"], ["chimney", "clean", "story", "jar"], ["dog", "ramp", "television", "lemon"], ["ammo", "vacation", "rose", "volume"], ["end", "commerce", "trophy", "shovel"], ["tube", "berry", "electricity", "spy"], ["snake", "Belgium", "sharp", "carton"], ["ladybug", "restaurant", "painting", "speaker"], ["syrup", "king", "place", "glasses"], ["plane", "nut", "bath", "nerve"], ["flour", "soil", "charm", "tame"], ["beard", "north", "bottle", "group"], ["honey", "desert", "paper", "virus"], ["iron", "whirlwind", "wine", "boat"], ["stick", "country", "secret", "cigarette"], ["snail", "dynamite", "pliers", "slide"], ["animal", "map", "waiter", "foot"], ["storm", "pod", "soldier", "ghost"], ["nude", "well", "rooster", "alcohol"], ["comforter", "brown", "covered", "furtiture"], ["bank", "lava", "dessert", "god"], ["library", "bomb", "food", "gift"], ["toilet", "earth", "mouse", "yellow"], ["blade", "peace", "bowl", "mouth"], ["cockroach", "landscape", "champagne", "Switzerland"], ["stitches", "garden", "spear", "ink"], ["studio", "cave", "mosquito", "magician"], ["spring", "band", "bone", "marine"], ["humor", "garbage", "car", "small"], ["train", "bear", "solitary", "grave"], ["hole", "march", "wood", "skeleton"], ["rifle", "post", "boss", "color"], ["bed", "zoo", "angel", "key"], ["leaf", "career", "swing", "bottom"], ["cushion", "necklace", "oil", "vampire"], ["caterpillar", "bar", "strong", "knife"], ["melon", "lake", "sound", "gold"], ["heavy", "tea", "room", "life"], ["feather", "pan", "orange", "tiny"], ["wind", "China", "belt", "bark"], ["wheel", "balance", "universe", "chameleon"], ["mass", "photo", "orchard", "performance"], ["pearl", "carrot", "lady", "blanket"], ["fuel", "look", "roll", "hook"], ["layer", "devil", "mint", "recent"], ["basement", "sun", "concert", "cable"], ["newspaper", "bug", "egg", "nail"], ["chain", "cold", "advocate", "fur"], ["comedy", "pocket", "suite", "missile"], ["handicap", "lion", "rich", "star"], ["spicy", "hat", "large", "pine"], ["hearing", "ladle", "hearth", "stage"], ["field", "flute", "crab", "passion"], ["sight", "base", "subway", "baby"], ["mobile", "oak", "raft", "suspect"], ["cheese", "illness", "column", "cloud"], ["glass", "turn", "hobbies", "series"], ["judge", "herbs", "dresser", "suitcase"], ["month", "stroke", "cabbage", "stunt"], ["space", "accessory", "brain", "alarm"], ["oven", "entry", "round", "sand"], ["phone", "music", "cantina", "lightning"], ["perfume", "chariot", "napkin", "limb"], ["museum", "wheat", "roof", "canal"], ["surgeon", "silver", "menu", "pizza"], ["jump", "cinema", "cup", "dream"], ["snow", "palace", "wing", "scissors"], ["couch", "helmet", "farm", "strength"], ["whip", "uniform", "human", "window"], ["hammer", "forbidden", "drawing", "bin"], ["pig", "rail", "sage", "trade"], ["rifle", "boss", "post", "color"], ["sport", "airport", "currency", "mirage"], ["stud", "bench", "camera", "patron"], ["business", "myth", "big", "dish"], ["feline", "clown", "garage", "tobacco"], ["barn", "explore", "giant", "tower"], ["fry", "ruler", "revolution", "mail"], ["fish", "inside", "astronaut", "padlock"], ["attic", "dough", "water", "queen"], ["beef", "mark", "chair", "doctor"], ["puzzle", "stone", "cougar", "coffee"], ["degree", "siren", "cube", "apron"], ["internet", "father", "snack", "captain"], ["wizard", "rake", "tongue", "attraction"], ["young", "ocean", "camouflage", "salad"], ["root", "screen", "beast", "volcano"], ["mushroom", "truck", "church", "table"], ["history", "day", "shield", "inspection"], ["sweet", "nest", "bubble", "poetry"], ["exhibition", "ship", "apple", "common"], ["mud", "grenade", "trash", "claw"], ["letter", "safari", "sewer", "engine"], ["hair", "tool", "hall", "heroine"], ["microscope", "report", "string", "blood"], ["file", "magnet", "tennis", "shop"], ["science", "cross", "hot", "dwarf"], ["branch", "quilt", "soap", "full"], ["fashion", "movie", "tile", "bite"], ["bang", "owl", "ruin", "stamp"], ["gas", "appetit", "war", "heart"]];
+            const cards = [["stylist", "pyramid", "club", "loop"], ["broom", "tradition", "bronze", "saber"], ["lazy", "stocks", "crane", "district"], ["luxury", "battery", "carpet", "laugh"], ["flame", "sleeve", "architecture", "family"], ["shark", "feed", "ear", "cavern"], ["double", "silence", "air", "police"], ["closet", "rain", "asset", "race"], ["military", "dinosaur", "birthday", "press"], ["Africa", "liquid", "twins", "patio"], ["mind", "moon", "hide", "casino"], ["game", "canvas", "punch", "soup"], ["dance", "prison", "matter", "crown"], ["lock", "schedule", "guitar", "thermometer"], ["distributor", "plush", "archeology", "cork"], ["canal", "wheat", "museum", "roof"], ["Asia", "glove", "shape", "ground"], ["hell", "track", "milk", "taste"], ["smoke", "needle", "knot", "butcher"], ["book", "soft", "poison", "diamond"], ["America", "wand", "pigeon", "robot"], ["button", "union", "axe", "board"], ["light", "case", "pepper", "fast"], ["hard", "kitchen", "finger", "note"], ["ball", "night", "tree", "school"], ["reptile", "major", "dead", "radar"], ["donkey", "virgin", "mug", "pork"], ["clothing", "banana", "tattoo", "doe"], ["chocolate", "office", "pair", "protect"], ["tent", "noodle", "weapon", "bakery"], ["fountain", "ice", "walk", "chick"], ["genius", "jewel", "summit", "bug"], ["log", "master", "skin", "border"], ["plank", "oasis", "cereal", "evening"], ["toy", "basket", "weak", "knight"], ["mummy", "flight", "bread", "chess"], ["forecast", "screw", "tomato", "grey"], ["foam", "handle", "talent", "vegetable"], ["major", "dead", "radar", "reptile"], ["frame", "weight", "pumpkin", "jungle"], ["marker", "technology", "edge", "beer"], ["diet", "explosion", "tap", "show"], ["deep", "region", "cemetery", "bracelet"], ["old", "tiger", "alliance", "cabin"], ["leak", "flask", "target", "marriage"], ["revenge", "watch", "motor", "heel"], ["ray", "boot", "rat", "gate"], ["detergent", "castle", "frost", "plastic"], ["foot", "winter", "high", "island"], ["cow", "circle", "sock", "door"], ["metal", "lighthouse", "emergency", "hero"], ["curtain", "charge", "Antarctica", "armor"], ["essence", "joke", "hospital", "roast"], ["building", "boxing", "first", "fever"], ["award", "fly", "calendar", "skull"], ["eye", "sea", "bouquet", "box"], ["Europe", "repair", "victory", "dragon"], ["cactus", "bulb", "cake", "princess"], ["trailer", "decor", "recipe", "blond"], ["cream", "laser", "arm", "work"], ["grain", "shed", "turtle", "statue"], ["beach", "morning", "head", "machine"], ["champion", "permanent", "cannon", "potato"], ["exit", "plant", "candle", "antiquity"], ["console", "voice", "recipient", "cell"], ["rice", "balcony", "bag", "thing"], ["short", "drink", "horse", "polar"], ["green", "pie", "cage", "bump"], ["theater", "smell", "oar", "thief"], ["chimney", "clean", "story", "jar"], ["dog", "ramp", "television", "lemon"], ["ammo", "vacation", "rose", "volume"], ["end", "commerce", "trophy", "shovel"], ["tube", "berry", "electricity", "spy"], ["snake", "Belgium", "sharp", "carton"], ["ladybug", "restaurant", "painting", "speaker"], ["syrup", "king", "place", "glasses"], ["plane", "nut", "bath", "nerve"], ["flour", "soil", "charm", "tame"], ["beard", "north", "bottle", "group"], ["honey", "desert", "paper", "virus"], ["iron", "whirlwind", "wine", "boat"], ["stick", "country", "secret", "cigarette"], ["snail", "dynamite", "pliers", "slide"], ["animal", "map", "waiter", "foot"], ["storm", "pod", "soldier", "ghost"], ["nude", "well", "rooster", "alcohol"], ["comforter", "brown", "covered", "furniture"], ["bank", "lava", "dessert", "god"], ["library", "bomb", "food", "gift"], ["toilet", "earth", "mouse", "yellow"], ["blade", "peace", "bowl", "mouth"], ["cockroach", "landscape", "champagne", "Switzerland"], ["stitches", "garden", "spear", "ink"], ["studio", "cave", "mosquito", "magician"], ["spring", "band", "bone", "marine"], ["humor", "garbage", "car", "small"], ["train", "bear", "solitary", "grave"], ["hole", "march", "wood", "skeleton"], ["rifle", "post", "boss", "color"], ["bed", "zoo", "angel", "key"], ["leaf", "career", "swing", "bottom"], ["cushion", "necklace", "oil", "vampire"], ["caterpillar", "bar", "strong", "knife"], ["melon", "lake", "sound", "gold"], ["heavy", "tea", "room", "life"], ["feather", "pan", "orange", "tiny"], ["wind", "China", "belt", "bark"], ["wheel", "balance", "universe", "chameleon"], ["mass", "photo", "orchard", "performance"], ["pearl", "carrot", "lady", "blanket"], ["fuel", "look", "roll", "hook"], ["layer", "devil", "mint", "recent"], ["basement", "sun", "concert", "cable"], ["newspaper", "bug", "egg", "nail"], ["chain", "cold", "advocate", "fur"], ["comedy", "pocket", "suite", "missile"], ["handicap", "lion", "rich", "star"], ["spicy", "hat", "large", "pine"], ["hearing", "ladle", "hearth", "stage"], ["field", "flute", "crab", "passion"], ["sight", "base", "subway", "baby"], ["mobile", "oak", "raft", "suspect"], ["cheese", "illness", "column", "cloud"], ["glass", "turn", "hobbies", "series"], ["judge", "herbs", "dresser", "suitcase"], ["month", "stroke", "cabbage", "stunt"], ["space", "accessory", "brain", "alarm"], ["oven", "entry", "round", "sand"], ["phone", "music", "cantina", "lightning"], ["perfume", "chariot", "napkin", "limb"], ["museum", "wheat", "roof", "canal"], ["surgeon", "silver", "menu", "pizza"], ["jump", "cinema", "cup", "dream"], ["snow", "palace", "wing", "scissors"], ["couch", "helmet", "farm", "strength"], ["whip", "uniform", "human", "window"], ["hammer", "forbidden", "drawing", "bin"], ["pig", "rail", "sage", "trade"], ["rifle", "boss", "post", "color"], ["sport", "airport", "currency", "mirage"], ["stud", "bench", "camera", "patron"], ["business", "myth", "big", "dish"], ["feline", "clown", "garage", "tobacco"], ["barn", "explore", "giant", "tower"], ["fry", "ruler", "revolution", "mail"], ["fish", "inside", "astronaut", "padlock"], ["attic", "dough", "water", "queen"], ["beef", "mark", "chair", "doctor"], ["puzzle", "stone", "cougar", "coffee"], ["degree", "siren", "cube", "apron"], ["internet", "father", "snack", "captain"], ["wizard", "rake", "tongue", "attraction"], ["young", "ocean", "camouflage", "salad"], ["root", "screen", "beast", "volcano"], ["mushroom", "truck", "church", "table"], ["history", "day", "shield", "inspection"], ["sweet", "nest", "bubble", "poetry"], ["exhibition", "ship", "apple", "common"], ["mud", "grenade", "trash", "claw"], ["letter", "safari", "sewer", "engine"], ["hair", "tool", "hall", "heroine"], ["microscope", "report", "string", "blood"], ["file", "magnet", "tennis", "shop"], ["science", "cross", "hot", "dwarf"], ["branch", "quilt", "soap", "full"], ["fashion", "movie", "tile", "bite"], ["bang", "owl", "ruin", "stamp"], ["gas", "appetite", "war", "heart"]];
 
             function withId(id) {
                 return document.getElementById(id);
@@ -517,7 +527,6 @@
             for (let i = 1; i <= cardNum; ++i) {
                 const card = {words: []};
                 const cardEl = el("div", null, "card");
-                cardEl.dataset.index = i;
 
                 let cardWords, index, startingIndex;
                 if (!wordEntryMode) {
@@ -639,26 +648,42 @@
                 });
             } else {
                 function swap(selectedCard, card) {
+                    rotate(selectedCard, 0);
+                    rotate(card, 0);
                     const selectedCardEl = selectedCard.el;
                     const swapCardEl = card.el;
                     if (swapCardEl !== selectedCardEl) {
-                        if (selectedCard.listIndex === 4) {
-                            playContainerEl.replaceChild(swapCardEl, selectedCardEl);
-                            cardContainerEl.appendChild(selectedCardEl);
-                            selectedCard.rotation -= cardContainer.rotation;
-                            card.rotation += cardContainer.rotation;
-                        }
-                        if (card.listIndex === 4) {
-                            card.rotation -= cardContainer.rotation;
-                            selectedCard.rotation += cardContainer.rotation;
-                            playContainerEl.replaceChild(selectedCardEl, swapCardEl);
-                            cardContainerEl.appendChild(swapCardEl);
-                        }
-
                         [currentCards[selectedCard.listIndex], currentCards[card.listIndex]] = [currentCards[card.listIndex], currentCards[selectedCard.listIndex]];
                         [selectedCard.listIndex, card.listIndex] = [card.listIndex, selectedCard.listIndex];
-                        rotate(selectedCard, 0);
-                        rotate(card, 0);
+                        const selectedRect = selectedCardEl.getBoundingClientRect();
+                        const swapRect = swapCardEl.getBoundingClientRect();
+                        selectedCardEl.className += " animated";
+                        selectedCardEl.style.top = `${swapRect.top - selectedRect.top}px`;
+                        selectedCardEl.style.left = `${swapRect.left - selectedRect.left}px`;   
+                        swapCardEl.className += " animated";
+                        swapCardEl.style.top = `${selectedRect.top - swapRect.top}px`;
+                        swapCardEl.style.left = `${selectedRect.left - swapRect.left}px`;
+                        
+                        setTimeout(() => {
+                            if (card.listIndex === 4) {
+                                playContainerEl.replaceChild(swapCardEl, selectedCardEl);
+                                cardContainerEl.appendChild(selectedCardEl);
+                                selectedCard.rotation -= cardContainer.rotation;
+                                card.rotation += cardContainer.rotation;
+                            }
+                            if (selectedCard.listIndex === 4) {
+                                card.rotation -= cardContainer.rotation;
+                                selectedCard.rotation += cardContainer.rotation;
+                                playContainerEl.replaceChild(selectedCardEl, swapCardEl);
+                                cardContainerEl.appendChild(swapCardEl);
+                            }
+                            rotate(selectedCard, 0);
+                            rotate(card, 0);
+                            selectedCardEl.style.top = '0';
+                            selectedCardEl.style.left = '0';
+                            swapCardEl.style.top = '0';
+                            swapCardEl.style.left = '0';
+                        }, 500);
                     } else {
                         rotate(card);
                     }
